# xlibs

./: .gitignore  Makefile.am  README.md  configure.ac  make.common  makefile  xlibs.spec
include/: xastro.h  xastroion.h  xastroline.h  xbinmath.h  xcomplex.h  xcpp.h  xextprec.h  xfit.h  xflash.h  xgraph.h  xio.h  xlinalg.h  xlinalgep.h  xmath.h  xpolynomial.h  xroots.h  xstat.h  xstdlib.h
share/: README  allens_pf_data.csv  ionization_data.old
sources_and_docs/expdouble/: man_squaring.tex
testing/: Makefile.am  makefile  xastroion_test.cpp  xdataset_test.csv  xdataset_test2.csv  xdatasetresize.cpp  xrand_test.cpp
testing/src/: FLASH_1D_Test.cpp  xdataset_testing.cpp  xexpdouble_test.cpp  xfit_bound_test.cpp  xmath_test_parallel.cpp  xrand_test.cpp  xsmatrix_eigv.cpp
xastro/: Makefile.am  XAstro.cpp  xastro.pc.in  xastroion.cpp
xastro/include/: xastro.h  xastroion.h
xastro/share/: Irwin_pf_data.csv
xastro/src/: XAstro.cpp  xastro_CCM_dered.cpp  xastro_dates.cpp  xastro_redshift.cpp  xastroion.cpp  xastroline.cpp
xcpp/: Makefile.am  xcpp.pc.in
xcpp/src/: xcpp_dictionary.cpp  xcpp_tokenizer.cpp
xflash/: Makefile.am  xflash.cpp  xflash.pc.in  xflash_reader.cpp  xflash_reader_hdf5.cpp
xflash/src/: xflash_reader.cpp  xflash_reader_chombo.cpp  xflash_reader_hdf4.cpp  xflash_reader_hdf5.cpp  xflash_reader_ncdf.cpp
xio/: Makefile.am  xdataset.cpp  xdataset_advanced.cpp  xio.pc.in  xio_mpi.pc.in  xmap.cpp
xio/include/: xio.h
xio/src/: xdataparse.cpp  xdataset.cpp  xdataset_advanced.cpp  xdataset_improved.cpp  xiocmn.cpp  xmap.cpp
xmath/: Makefile.am  xcomplex.cpp  xfit.cpp  xindex_vector.cpp  xmath.cpp  xmath.pc.in  xmatrix.cpp  xmatrix_tri.cpp  xpolynomial.cpp  xroots.cpp  xstat.cpp  xtensor.cpp  xvector.cpp
xmath/include/: xextprec.h  xfit.h  xlinalg.h  xlinalgep.h  xmath.h  xroots.h
xmath/src/: xbinmath.cpp  xcomplex.cpp  xexpdouble.cpp  xfit.cpp  xfit_bound.cpp.save  xindex_vector.cpp  xmath.cpp  xmatrix.cpp  xmatrix_ep.cpp  xmatrix_long.cpp  xmatrix_tri.cpp  xpolynomial.cpp  xroots.cpp  xstat.cpp  xtensor.cpp  xvector.cpp  xvector_ep.cpp  xvector_long.cpp
xstdlib/: Makefile.am  xstdlib.cpp  xstdlib.pc.in
xstdlib/include/: xstdlib.h
xstdlib/src/: command_line_parse.cpp  xstdlib.cpp
xtime/: Makefile.am  xtime.pc.in
xtime/include/: xtime.h
xtime/src/: xtime.cpp
xtools/: Makefile.am  makefile  xdatasetget.cpp  xdatasettocsv.cpp
xtools/src/: expfit.cpp  linfit.cpp  powfitplus.cpp  textcolumize.cpp  xdatasetget.cpp  xdatasettocsv.cpp  xgenwiki.cpp
